# lab6-engsoft2

./: .coverage  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
root_finder/: root.py
tests/: test_delta.py
